samples/_failures_safe/1761307803_610f55_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6cf89907.c: In function ‘matrix_transpose’:
./samples/SAFE/__tmp_6cf89907.c:146:17: error: expected declaration or statement at end of input
  146 |                 MATRIX_ELEM(src->data, i, j, src->cols);
      |                 ^~~~~~~~~~~
./samples/SAFE/__tmp_6cf89907.c:146:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6cf89907.c:146:17: error: expected declaration or statement at end of input
